View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027266 | Open CASCADE | OCCT:Coding | public | 2016-03-15 21:02 | 2016-04-20 15:49 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027266: Coding, TKOpenGl - drop unused files OpenGl_telem_util.hxx and OpenGl_tgl_funcs.hxx | ||||
Description | The files OpenGl_telem_util.hxx and OpenGl_tgl_funcs.hxx are not used within TKOpenGl and can be safely removed. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27266 has been created by kgv. SHA-1: d120954493b3e1aa2362e72b3afd1c7b8c8fede8 Detailed log of new commits: Author: kgv Date: Tue Mar 15 21:02:32 2016 +0300 0027266: Coding, TKOpenGl - drop unused files OpenGl_telem_util.hxx and OpenGl_tgl_funcs.hxx |
|
Please check compilation, testing is not needed. |
|
Dear BugMaster, Branch CR27266 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: d120954493b3e1aa2362e72b3afd1c7b8c8fede8 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 41 (41 on master) Windows: 0 (0 on master) |
|
Dear BugMaster, Branch CR27266 is TESTED. |
|
Branch CR27266 has been deleted by kgv. SHA-1: d120954493b3e1aa2362e72b3afd1c7b8c8fede8 |
occt: master 185a35a7 2016-03-15 18:02:32
Committer: abv Details Diff |
0027266: Coding, TKOpenGl - drop unused files OpenGl_telem_util.hxx and OpenGl_tgl_funcs.hxx |
Affected Issues 0027266 |
|
mod - src/OpenGl/FILES | Diff File | ||
mod - src/OpenGl/OpenGl_Structure.cxx | Diff File | ||
rm - src/OpenGl/OpenGl_telem_util.cxx | Diff File | ||
rm - src/OpenGl/OpenGl_telem_util.hxx | Diff File | ||
rm - src/OpenGl/OpenGl_tgl_funcs.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_View_Print.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_View_Redraw.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-03-15 21:02 | kgv | New Issue | |
2016-03-15 21:02 | kgv | Assigned To | => kgv |
2016-03-15 21:05 | git | Note Added: 0051677 | |
2016-03-15 21:05 | kgv | Note Added: 0051678 | |
2016-03-15 21:05 | kgv | Assigned To | kgv => bugmaster |
2016-03-15 21:05 | kgv | Status | new => resolved |
2016-03-15 21:05 | kgv | Status | resolved => reviewed |
2016-03-16 11:36 |
|
Assigned To | bugmaster => mkv |
2016-03-16 14:42 |
|
Note Added: 0051703 | |
2016-03-16 14:43 |
|
Note Added: 0051704 | |
2016-03-16 14:43 |
|
Assigned To | mkv => bugmaster |
2016-03-16 14:43 |
|
Status | reviewed => tested |
2016-03-16 14:43 |
|
Test case number | => Not needed |
2016-03-21 14:58 |
|
Changeset attached | => occt master 185a35a7 |
2016-03-21 14:58 |
|
Assigned To | bugmaster => abv |
2016-03-21 14:58 |
|
Status | tested => verified |
2016-03-21 14:58 |
|
Resolution | open => fixed |
2016-04-17 13:07 | git | Note Added: 0052826 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:49 |
|
Status | verified => closed |